[metadata]
name = sam
version = 0.6
author = Daniel Thorngren
description=Sam is an MCMC sampling library for python, written in Cython.
license=MIT
long_description = file: README.md, LICENSE.txt
url=https://github.com/dpthorngren/Sam
github_project = dpthorngren/Sam

[options]
packages = sam
package_dir =
    =src
install_requires =
    cython
    numpy
    scipy

[options.package_data]
* = sam.pxd, gaussianProcess.pxd, distributions.pxd
